# timeworn

./: README.md
blood-transfusion/: .gitignore  LICENSE.md  README.md  blood-transfusion.cabal  stack.yaml
blood-transfusion/src/: BloodTransfusion.hs
cartons/: .gitignore  .gitmodules  LICENSE.md  README.md  binary-caches.nix  buriti.nix  chvt.nix  disable-su-to-root.nix  dnscrypt-cisco-resolver.nix  dnscrypt.nix  extra-builtins.nix  kernel-vt-color-palette.nix  kmscon.nix  nix-pass.sh  nixops-managed.nix  openssh.nix  overlays-compat.nix  slim.nix  suspend-on-low-battery.nix  wlans.nix
cartons/deployments/: defaults.nix  laptops.nix
cartons/keys/: buriti.nix  leo.nix
cartons/lib/: keys-and-adhoc-persistence.nix  keys.nix  match.nix  systemd-tmpfiles-rules.nix
cartons/pkgs/config/autorandr/: postswitch
cartons/pkgs/config/autorandr/hdmi-mirror/: config  setup
cartons/pkgs/config/autorandr/hdmi-only/: config
cartons/pkgs/config/autorandr/mobile/: config  setup
cartons/pkgs/config/dunst/: dunstrc
cartons/pkgs/config/dwm/: config-dwm-6.2.diff
cartons/pkgs/config/firefox/: mozilla.cfg
cartons/pkgs/config/highlight/: defaults-override.lua
cartons/pkgs/config/libtsm/: libtsm-3-buriti-colors.diff
cartons/pkgs/config/radare2/: buriti  radare2rc
cartons/pkgs/config/slstatus/: config-slstatus.h
cartons/pkgs/config/vim/: color.vim  vimrc
cartons/pkgs/custom/: chvt-priv.nix  firefox-with-config.nix  ghidra.nix  https-everywhere.nix  power-stats.nix  refresh-power-stats.nix  slimlock-priv.nix  ublock-origin.nix  x-notify-on-low-battery.nix
cartons/pkgs/groups/: base.nix  comprehensive.nix  dabbler.nix  deployer.nix  desktop.nix  dev.nix  laptop.nix
cartons/pkgs/overlays/: autorandr.nix  custom-scripts.nix  dunst.nix  dwm.nix  firefox.nix  haskell-packages.nix  libtsm.nix  neovim.nix  ranger.nix  slim.nix  slstatus.nix  zap.nix
cartons/pkgs/wrappers/: fzf.nix  ghidra.nix  highlight.nix  neovim.nix  radare2.nix  ripgrep.nix
cartons/users/: backup.nix
cartons/users/groups/: bastions.nix
cartons/users/leo/: buku.nix  default.nix  github.nix  main.nix
cartons/x/: minimalist.nix  notify-on-low-battery.nix
cartons/x/keyboard/: qwerty-intl-tupiniquim.nix
hm-def-light/: README.md  index.js  language.js  package.json  type-carton.js
hm-def-light/test/: test.js
hm-def-light/test/internal/: types.js
hm-lang-light/: LICENSE.md  README.md  index.js  package.json  parsers.js  run-parser.js  tokens.js  tuple-select.js
hm-lang-light/test/: fantasy-land-tests.js  initial-tests.js  sanctuary-tests.js  test.js
rose-tree/: README.md  index.js  package.json  type.js
rose-tree/img/: Thumbs.db
rose-tree/test/: fantasy-land-laws-tests.js
tsuru-capital-code-sample/: .gitignore  README.md  quotes-summary.prof  stack.yaml  tsuru-capital-code-sample.cabal
tsuru-capital-code-sample/assets/: tests.cast
tsuru-capital-code-sample/src/: Bench.hs  CodeSample.hs  Main.hs  MainWithConduit.hs  Test.hs
